--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,11 @@
 .LoginBG{
     background-image: url('../public/BackImage.png');
 }
+
+.TextOverFlow-2{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
